Fixed bad responsive images - Done by simply hiding the images when the screensize is getting too small. This even makes for at better and more readable experience.

--- a/static/core/css/templatemo-style.css
+++ b/static/core/css/templatemo-style.css
@@ -262,7 +262,10 @@ button:focus { outline: none; }
 
 .tm-news-item:last-child { margin-bottom: 0; }
 
-.tm-news-item-img {	margin: 0 auto; }
+
+.tm-news-item-img {
+	margin: 0 auto;
+}
 
 .tm-news-item-img-container { padding: 0; }
 
@@ -456,6 +459,10 @@ body.page-2 { padding-top: 80px; }
 	}
 	
 	.tm-gallery-img-container { width: 33.333%; }
+	.tm-news-item-img-container {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 @media (max-width: 767px) {
